@@ -8,7 +8,8 @@ NEW FEATURES
 BUG FIXES
 (sandberg) 3DUI: The active item are now default selected when entering the option screen. (r728)
 (sandberg) 3DUI: The program version is now only shown on the option screen when using the 3D UI (r727)
-(sandberg) 3DUI: Fixed a couple of bug which caused the UI to read random data (r730)
+(sandberg) 3DUI: Fixed a couple of bug which caused the UI to read random data. (r730)
+(sandberg) Core: Added check for buffer event, so they are only sent when there are changes. (r731)
 
 0.38-Pre1
 NEW FEATURES
